--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 rayon = "1.3"
 rayon-cond = { verson = "*", git = "https://github.com/n1t0/rayon-cond" }
 hound = "3.4.0"
+minimp3 = "0.5"
+claxon = "0.4.3"
