--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,8 @@ edition = "2018"
 
 [dependencies]
 rayon = "1.3"
-rayon-cond = { verson = "*", git = "https://github.com/n1t0/rayon-cond" }
+rayon-cond = { version = "*", git = "https://github.com/n1t0/rayon-cond" }
 hound = "3.4.0"
 minimp3 = "0.5"
 claxon = "0.4.3"
-rodio = "0.13.1"
-rubato = "0.8.0"
+samplerate = "0.2.4"
